// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Filter
  getFacetValueForOption={[Function]}
  header={
    <FilterHeader
      name="metric_domain.Duplications"
    />
  }
  highlightUnder={1}
  highlightUnderMax={5}
  onQueryChange={[MockFunction]}
  options={
    [
      1,
      2,
      3,
      4,
      5,
      6,
    ]
  }
  property="duplications"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
/>
`;

exports[`renders 2`] = `
<div
  className="display-flex-center"
>
  <DuplicationsRating
    muted={true}
    size="small"
    value={4}
  />
  <span
    className="spacer-left"
  >
    3% - 5%
  </span>
</div>
`;

exports[`renders 3`] = `
<div
  className="display-flex-center"
>
  <span
    className="spacer-left"
  >
    <span
      className="big-spacer-left"
    >
      no_data
    </span>
  </span>
</div>
`;
